--- a/lessons/ch01_memory/Cargo.toml
+++ b/lessons/ch01_memory/Cargo.toml
@@ -1,9 +1,8 @@
-workspace = { members = ["lessons/ch01_memory", "lessons/ch03_rust_first"] }
-
 [package]
-name = "wave"
+name = "ch01_memory"
 version = "0.1.0"
 edition = "2021"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
