--- a/lessons/ch03_rust_first/Cargo.toml
+++ b/lessons/ch03_rust_first/Cargo.toml
@@ -1,9 +1,10 @@
-workspace = { members = ["lessons/ch01_memory", "lessons/ch03_rust_first"] }
-
 [package]
-name = "wave"
+name = "ch03_rust_first"
 version = "0.1.0"
 edition = "2021"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# reqwest = { version = "0.11", features = ["blocking"] }
+html2md = "0.2"
