--- a/lessons/ch00_KV/Cargo.toml
+++ b/lessons/ch00_KV/Cargo.toml
@@ -10,9 +10,10 @@ bytes = "1" # 高效处理网络 buffer 的库
 prost = "0.8" # 处理 protobuf 的代码
 tracing = "0.1" # 日志处理
 
-[dev-dependencies]anyhow = "1" # 错误处理
-async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP 
-framefutures = "0.3" # 提供 Stream trait
+[dev-dependencies]
+anyhow = "1" # 错误处理
+async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
+futures = "0.3" # 提供 Stream trait
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
 tracing-subscriber = "0.2" # 日志处理
 
