--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2021"
 
 [dependencies]
 tokio = {version = "1", features = ["full"]}
+prost = "0.7"
+prost-types = {version = "0.7", optional = true}
+anyhow = "1"
+
+[build-dependencies]
+prost-build = "0.7"
