--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = {version = "1", features = ["full"]}
 prost = "0.7"
 prost-types = {version = "0.7", optional = true}
 anyhow = "1"
+sqlite  = "=0.36.0"
 
 [build-dependencies]
 prost-build = "0.7"
