--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ edition = "2021"
 
 [dependencies]
 tokio = {version = "1", features = ["full"]}
-prost = "0.7" # protobuf
+prost = "0.7" # protobuf库
 prost-types = {version = "0.7", optional = true}
 anyhow = "1"
-sqlite  = "=0.36.0" # sqlite
+sqlite  = "=0.36.0" # sqlite库
+libc="0.2"
 
 [build-dependencies]
 prost-build = "0.7"
+
+[build]
+build = "build.rs"
