库的问题算是解决了，回到正轨

--- a/libs/recast_nav/CMakeLists.txt
+++ b/libs/recast_nav/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
 file(GLOB_RECURSE SOURCE_FILE ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
-add_library(RecastNavLib SHARED ${SOURCE_FILE})
-target_link_libraries(RecastNavLib stdc++)
+add_library(RecastNav SHARED ${SOURCE_FILE})
+target_link_libraries(RecastNav stdc++)
