--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+blue = {path = "./blue"}
 tokio = {version = "1", features = ["full"]}
 prost = "0.7" # protobuf库
 prost-types = {version = "0.7", optional = true}
