--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1"
 sqlite  = "=0.36.0" # sqlite库
 libc="0.2"
 cc = "1.0" # recast_nav中用了stl
+shut_up = "0.1.1"
 
 [build-dependencies]
 prost-build = "0.7"
